<resources>
    <string name="app_name">Wunder Cars</string>

    <!-- Labels -->
    <string name="label_tab_locations">Locations</string>
    <string name="label_tab_map">Map</string>
    <string name="label_car_exterior">Exterior:</string>
    <string name="label_car_interior">Interior:</string>
    <string name="label_car_engine">Engine Type:</string>
    <string name="label_car_fuel">Fuel:</string>
    <string name="label_car_vin">VIN:</string>

    <!-- Error messages & Dialogs -->
    <string name="no_internet">No internet connection.\nNo locations, right?</string>
    <string name="no_connection">Connection unavailable</string>
    <string name="no_map_request">Sorry! You can\'t make maps requests.</string>
    <string name="dialog_title">Permission Needed</string>
    <string name="dialog_message">This permission is needed, so the app could localize you in relation with the cars.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="location_unknown">Unable to get current location.</string>

    <!-- Preferences -->
    <string name="pref_locations_status_key">locations_loaded</string>

    <!-- Content Description -->
    <string name="no_connection_icon">No connection icon</string>
    <string name="car_exterior_icon">Car exterior icon</string>
    <string name="car_interior_icon">Car interior icon</string>
    <string name="car_engine_icon">Engine type icon</string>
    <string name="car_fuel_icon">Fuel amount icon</string>

</resources>
