<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_margin="8dp"
    android:background="@color/colorAccent"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/car_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="HH-GO8577" />

        <TextView
            android:id="@+id/car_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="2"
            android:textColor="@color/primaryLightColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_number"
            tools:text="Lesserstraße 170, 22049 Hamburg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_address">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/label_car_exterior"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/car_exterior_icon"
                    android:src="@drawable/exterior_car_icon" />

                <TextView
                    android:id="@+id/car_exterior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:text="Good" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/label_car_interior"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/car_interior_icon"
                    android:src="@drawable/interior_car_icon" />

                <TextView
                    android:id="@+id/car_interior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:text="Unacceptable" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/label_car_engine"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/car_engine_icon"
                    android:src="@drawable/engine" />

                <TextView
                    android:id="@+id/car_engine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:text="CE" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/label_car_fuel"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/car_fuel_icon"
                    android:src="@drawable/fuel" />

                <TextView
                    android:id="@+id/car_fuel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:text="87" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>